--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
-          <h1>NLPforMentalHealth</h1>
+          <h1>NLPforMentalHealth.me</h1>
         </a>
-        <h1>{{ site.description | default: site.github.project_tagline }}</h1>
+        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
         {% if site.github.is_project_page %}
           <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
         {% endif %}
